
    ERROR: The add command requires the Shorewall library dynamiczones
    (/usr/share/shorewall-shell/lib.dynamiczones) which is not
    installed

    With shorewall-shell installed, 'shorewall add' failed with:

    ERROR: Only one firewall zone may be defined

9) 'shorewall add' and 'shorewall delete' now work again.

10) A syntax error in the lib.base Shell library has been corrected.

Other changes in Shorewall 3.9.2

1)  A LOCKFILE option has been added to shorewall.conf. This file is
    used to serialize updates to the active firewall configuration.

    If not specified, the defaults are:

       Shorewall - /var/lib/shorewall/lock
       Shorewall Lite - /var/lib/shorewall-lite/lock

2)  A new IPPserver macro has been added for CUPS print servers.

Migration Considerations:

1)  You cannot simply upgrade your existing Shorewall package. You must
    upgrade Shorewall *and* install one or both of the compilers.

    If you attempt to upgrade using the RPM, you get this result:

    gateway:~ # rpm -Uvh shorewall-3.9.2-1.noarch.rpm 
    error: Failed dependencies:
        shorewall_compiler is needed by shorewall-3.9.2-1.noarch
    gateway:~ #

    You must either:

	rpm -U shorewall-3.9.2.noarch.rpm shorewall-shell-3.9.2.noarch.rpm

    or

	rpm -U shorewall-3.9.2.noarch.rpm shorewall-perl-3.9.2.noarch.rpm
	
    or
	rpm -i shorewall-shell-3.9.2.noarch.rpm
	rpm -U shorewall-3.9.2.noarch.rpm

    or
	rpm -i shorewall-perl-3.9.2.noarch.rpm
	rpm -U shorewall-3.9.2.noarch.rpm

    If you are upgrading using the tarball, you must install either
    shorewall-shell or shorewall-perl before you upgrade
    Shorewall. Otherwise, the install.sh script fails with:

         ERROR: No Shorewall compiler is installed

    The shorewall-shell and shorewall-perl packages are installed from
    the tarball in the expected way; untar the package, and run the
    install.sh script.

----------------------------------------------------------------------------