@@ -64,6 +64,12 @@ Problems corrected in Shorewall 3.9.2
 
 10) A syntax error in the lib.base Shell library has been corrected.
 
+11) When ROUTE_FILTER=Yes in shorewall.conf, Shorewall no longer clears
+    the rp_filter flag for all interfaces.
+
+12) When LOG_MARTIANS=Yes in shorewall.conf, Shorewall no longer clears
+    the log_martians flag for all interfaces.
+
 Other changes in Shorewall 3.9.2
 
 1)  A LOCKFILE option has been added to shorewall.conf. This file is
